--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "only_road_cross.sln"
+    "dotnet.defaultSolution": "Crosswalk.sln"
 }
